--- a/pom.xml
+++ b/pom.xml
@@ -3,17 +3,14 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<!-- Your own application should inherit from spring-boot-starter-parent -->
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-samples</artifactId>
-		<version>LATEST</version>
+	    <groupId>org.springframework.boot</groupId>
+	    <artifactId>spring-boot-starter-parent</artifactId>
+	    <version>2.1.3.RELEASE</version>
 	</parent>
+	<groupId>com.actuator.sample</groupId>
 	<artifactId>spring-boot-sample-actuator-ui</artifactId>
 	<name>Spring Boot Actuator UI Sample</name>
 	<description>Spring Boot Actuator UI Sample</description>
-	<properties>
-		<main.basedir>${basedir}/../..</main.basedir>
-	</properties>
 	<dependencies>
 		<!-- Compile -->
 		<dependency>
@@ -49,24 +46,6 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
-			</plugin>
-			<plugin>
-				<groupId>com.spotify</groupId>
-				<artifactId>docker-maven-plugin</artifactId>
-				<version>1.2.0</version>
-				<configuration>
-					<dockerHost>http://54.185.193.176:4243</dockerHost>
-					<imageName>actuator</imageName>
-					<baseImage>java</baseImage>
-					<entryPoint>["java", "-jar", "/${project.build.finalName}.jar"]</entryPoint>
-					<resources>
-						<resource>
-							<targetPath>/</targetPath>
-							<directory>${project.build.directory}</directory>
-							<include>${project.build.finalName}.jar</include>
-						</resource>
-					</resources>
-				</configuration>
 			</plugin>
 		</plugins>
 	</build>
